more powerful